# bluepill_baremetal

./: .gitignore  CMakeLists.txt  LICENSE  bluepill.ld
cmake/: crossplatform.cmake  toolchain.cmake
examples/: CMakeLists.txt  bootloader_test.cpp  gpio_test.cpp  uart_test.cpp
include/: CMakeLists.txt
include/app/: bootloader.h  pwm.h  stream.h
include/common/: defs.h
include/core/: nvic.h  pwr.h  rcc.h  scb.h  system.h  time.h
include/drivers/: adc.h  flash.h  port.h  spi.h  timer.h  uart.h  wifi.h
src/: CMakeLists.txt  app_bootloader.cpp  app_pwm.cpp  app_stream.cpp  common_defs.cpp  core_nvic.cpp  core_pwr.cpp  core_rcc.cpp  core_scb.cpp  core_system.cpp  core_time.cpp  driver_adc.cpp  driver_flash.cpp  driver_port.cpp  driver_spi.cpp  driver_timer.cpp  driver_uart.cpp  driver_wifi.cpp
